fix: add padding-top to first section on mobile

--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -556,6 +556,7 @@ nav {
         }
     }
     #home {
+        margin-top: 25px;
         .container {
             flex-direction: column-reverse;
         }
